add csmap code headers

--- a/calculate_ratios.ipynb
+++ b/calculate_ratios.ipynb
@@ -1,9 +1,48 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "abroad-trigger",
+   "metadata": {},
+   "source": [
+    "# Calculating Ratios for Congressmembers\n",
+    "Author: MB\n",
+    "\n",
+    "Date run: October 25, 2021\n",
+    "\n",
+    "Location: HPC\n",
+    "\n",
+    "The purpose of this script is to calculate the ratios for tweets by congressmembers and then provide summary statistics.\n",
+    "This script combines Twitter data with congressional data (such as party and nominate ideology) to generate these figures.\n",
+    "The ratio is calculated by subtracting the number of retweets from quotes and replies and then dividing by the sum of these\n",
+    "engagements. \n",
+    "\n",
+    "Data in:\n",
+    "* `tweet_data.csv`: Latest retweets for each original tweet by a member of congress\n",
+    "    * `retweeted__user__name`: the display name for the twitter account\n",
+    "    * `screen_name`: the lowercased screen name for the user\n",
+    "    * `retweeted__id`: the tweet ID for the original tweet\n",
+    "    * `retweeted__quote_count`: the number of quote tweets at the time of collection\n",
+    "    * `retweeted__retweet_count`: the number of retweets at the time of collection\n",
+    "    * `retweeted__replies_count`: the number of replies at the time of collection\n",
+    "* `congressmember_data.csv`: profile data for congressmembers\n",
+    "    * `bioguide`: the bioguide ID for the congressmember\n",
+    "    * `nominate_dim1`: the first dimension of their dw-nominate score (from voteview)\n",
+    "    * `name`: the congressmember's name\n",
+    "    * `birthdate`: the congressmember's birth date\n",
+    "    * `party`: the most recent party affiliation for the congressmember (from open-states)\n",
+    "    * `twitter`: the twitter ID for the congressmember (from open-states)\n",
+    "    * `screen_name`: the lowercased twitter ID for the congressmember (for joining with `tweet_data.csv`)\n",
+    "\n",
+    "Data out: all are figures\n",
+    "* box and whiskers plot of ratios for the top 20 most ratioed congressmembers\n",
+    "* box and whiskers plot of ideology of authors of tweets based on the quartile of the tweet ratio"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "developing-husband",
+   "id": "korean-return",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "changing-jurisdiction",
+   "id": "herbal-lesson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "specific-thickness",
+   "id": "still-recycling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "molecular-telling",
+   "id": "behavioral-preference",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "blond-experience",
+   "id": "oriental-merit",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "efficient-lincoln",
+   "id": "destroyed-damage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "wrapped-economy",
+   "id": "digital-illustration",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "blessed-effort",
+   "id": "resident-vietnam",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "exciting-receipt",
+   "id": "romance-blair",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dried-estonia",
+   "id": "conscious-wrist",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "numeric-franchise",
+   "id": "mediterranean-pleasure",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "naval-memory",
+   "id": "conceptual-precipitation",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -215,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "disturbed-distribution",
+   "id": "major-chuck",
    "metadata": {},
    "outputs": [],
    "source": []
