--- a/bar_plots_and_regression.ipynb
+++ b/bar_plots_and_regression.ipynb
@@ -1,9 +1,48 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "stylish-chassis",
+   "metadata": {},
+   "source": [
+    "# Creating Bar Plots for Ratioed Congressmembers and performing regression\n",
+    "Author: MB\n",
+    "\n",
+    "Date run: October 25, 2021\n",
+    "\n",
+    "Location: HPC\n",
+    "\n",
+    "The purpose of this script is to calculate the ratios for tweets by congressmembers and then provide summary statistics.\n",
+    "This script combines Twitter data with congressional data (such as party and nominate ideology) to generate these figures.\n",
+    "The ratio is calculated by subtracting the number of retweets from quotes and replies and then dividing by the sum of these\n",
+    "engagements. \n",
+    "\n",
+    "Data in:\n",
+    "* `tweet_data.csv`: Latest retweets for each original tweet by a member of congress\n",
+    "    * `retweeted__user__name`: the display name for the twitter account\n",
+    "    * `screen_name`: the lowercased screen name for the user\n",
+    "    * `retweeted__id`: the tweet ID for the original tweet\n",
+    "    * `retweeted__quote_count`: the number of quote tweets at the time of collection\n",
+    "    * `retweeted__retweet_count`: the number of retweets at the time of collection\n",
+    "    * `retweeted__replies_count`: the number of replies at the time of collection\n",
+    "* `congressmember_data.csv`: profile data for congressmembers\n",
+    "    * `bioguide`: the bioguide ID for the congressmember\n",
+    "    * `nominate_dim1`: the first dimension of their dw-nominate score (from voteview)\n",
+    "    * `name`: the congressmember's name\n",
+    "    * `birthdate`: the congressmember's birth date\n",
+    "    * `party`: the most recent party affiliation for the congressmember (from open-states)\n",
+    "    * `twitter`: the twitter ID for the congressmember (from open-states)\n",
+    "    * `screen_name`: the lowercased twitter ID for the congressmember (for joining with `tweet_data.csv`)\n",
+    "\n",
+    "Data out: all are figures\n",
+    "* bar plot of the median ratio for the top 20 most ratioed members of congress\n",
+    "* linear regression of the ratios (separated by party ID)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "electoral-finish",
+   "id": "joint-router",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "communist-bride",
+   "id": "going-adolescent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "brief-california",
+   "id": "maritime-malta",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "appreciated-bundle",
+   "id": "congressional-blood",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "expanded-platinum",
+   "id": "convertible-berry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "completed-reunion",
+   "id": "freelance-service",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "stunning-position",
+   "id": "compliant-decrease",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "directed-weight",
+   "id": "reasonable-eight",
    "metadata": {},
    "outputs": [
     {
@@ -158,6 +197,8 @@
    "source": [
     "# rename data for pretty figs\n",
     "data_to_output = merged.copy()\n",
+    "\n",
+    "# convert independents to democrats since that is who they caucus with\n",
     "data_to_output['party'] = data_to_output['party'].replace({'Independent':'Democratic'})\n",
     "data_to_output.rename({'ratio':'Median Ratio Per Member', \n",
     "                       'nominate_dim1':'Ideology of Tweet Author (From Left To Right)',\n",
@@ -183,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ultimate-gambling",
+   "id": "valued-express",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -191,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rough-signature",
+   "id": "found-matter",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -199,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "loose-repository",
+   "id": "conceptual-nepal",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -207,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coral-magazine",
+   "id": "constitutional-height",
    "metadata": {},
    "outputs": [],
    "source": []
